Update SdCardPrep exFAT casing in notice discrepancy

--- a/Components/Pages/SdCardPrep.razor
+++ b/Components/Pages/SdCardPrep.razor
@@ -37,7 +37,7 @@
                 </ol>
 
                 <div class="info-box">
-                    <p>ℹ️ <strong>Note:</strong> FAT32 or exFAT format can be used. FAT32 is generally considered the most stable, but exFat supports having individual files over 4GB in size.</p>
+                    <p>ℹ️ <strong>Note:</strong> FAT32 or exFAT format can be used. FAT32 is generally considered the most stable, but exFAT supports having individual files over 4GB in size.</p>
                 </div>
 
                 <div class="platform-instructions">
